--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 server.port=9093
+
 webclient.root-url=http://localhost:8092
+
+# Name of provider can be any, customized - 'springauth'. Used by oauth.setDefaultClientRegistrationId()
+spring.security.oauth2.client.provider.springauth.token-uri=http://localhost:9000/oauth2/token
+
+spring.security.oauth2.client.registration.springauth.client-name=springauth
+spring.security.oauth2.client.registration.springauth.client-id=messaging-client
+spring.security.oauth2.client.registration.springauth.client-secret=secret
+spring.security.oauth2.client.registration.springauth.scope[0]=message.read
+spring.security.oauth2.client.registration.springauth.scope[1]=message.write
+spring.security.oauth2.client.registration.springauth.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.springauth.provider=springauth
